Next phase of home page update - mini help for songs page.

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -105,22 +105,29 @@
 
 <div id="music" class="row col-md-12">
     <h1 class="music">Music</h1>
-    <p class="neutral">Are you learning to partner dance and looking for practice music? Or are you choreographing a piece and looking for new ideas for music?</p>
-    <p class="neutral">
-        Our <a href="/dances">dances page</a> is a quick reference for the styles of dance that will link you to a page for each dance including a description, a top ten list, and more.
-    </p>
-    <p class="neutral">
-        Or go directly to our <a href="/song">database of songs</a> where you can quickly search for a <a href="/song/search?SearchString=Aspettami">song</a> or sort a list of songs by attributes like <a href="/song/search?dances=SWG&filter=Index-.-Tempo-.-.-.-.-.-.-.">tempo</a> or <a href="/song/search?dances=ECS&filter=Index-.-Dances-.-.-.-.-.-.-.">popularity</a>.
-    </p>
-    <p class="neutral">
-        Most of the songs in our <a href="/song">database</a> are linked to purchase or streaming links for <a href="/song/advancedsearch?services=I">ITunes</a>, <a href="/song/advancedsearch?services=A">Amazon</a>, <a href="/song/advancedsearch?services=S">Spotify</a>, and <a href="/song/advancedsearch?services=X">Xbox Music</a> so try clicking on the logo of your prefered music source and listen or purchase the music that you've discovered here.
-    </p>
-    <p class="neutral">
-        Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.
-    </p>
-    <p class="neutral">
-        Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.
-    </p>
+    <p style="font-size: 150%">The song list page can by found by clicking clicking the "Songs" itme in the "Music" menu at the top of the page.  You'll start with  a list of songs and you can refine your search in many different ways.  Check some of them out in the illustration below.</p>
+</div>
+
+<div class="row col-md-12">
+    <img src="~/Content/song-page.png" alt="songs page" style="float: right; margin:10px" />
+    <ul style="list-style-type: upper-alpha; font-size: 150%">
+        <li><b>Dance Menu:</b> The dance menu will drop down to show all of the dance styles that we have cataloged. Clicking on any of the dances will filter the list to just those songs that can be danced to that style.  You can also see a list of dance styles on our <a href="/dances">dances page</a>.</li>
+        <li><b>Text Search:</b> Type the name of an artist or title of a song or a tag (like musical genre) here, click the search button to the right and get a list of the songs that include those words in the title, artist or tags.</li>
+        <li><b>More Options:</b> Clickin on this button will get you a few more options, including the ability to filter on a specific tempo range and limit your search to just songs that are linked to a particular streaming or purchase service (<a href="/song/advancedsearch?services=I">ITunes</a>, <a href="/song/advancedsearch?services=A">Amazon</a>, <a href="/song/advancedsearch?services=S">Spotify</a>, and <a href="/song/advancedsearch?services=X">Xbox Music</a>).</li>
+        <li><b>Play/Buy Buttons:</b> The play buttons will open a menu of the different places where you can listen to all or part of a song and purchase the song.  Please note that you must turn off pop-up blockers for this to work correctly and each service has a different set of questions that it will ask you before you get to actually playing the song.  This is much smoother the second time you use any particular service.</li>
+        <li><b>Song Title, Artist and Tempo:</b> Click on the "Title", "Artist" or "Tempo" column headers to sort the current list by song title or artist name, clicking again on the same header will sort in the other direction.  Clicking on any song title will take you to a page with additional details about the song.  Clicking on an Artist's name will take you to a list of songs by that artist.</li>
+        <li><b>Dances:</b> Clicking on the Dances column will sort the songs by popularity.  Each dance tag includes a popularity rating shown on how "filled up" the musical note is next to the dance name.</li>
+        <li><b>Dance Popover:</b> Clicking on any of the dance tags will open up a 'popover' with more info - clicking again on the same tag will close the 'popover'.  The popover always contains two links, one that will take you to the dance page for that dance style that includes a description the dance style, a top ten list and more. Dance names with an asterick next to them have additional tags on the association between the song and the dance style.</li>
+        <li><b>Tags Header:</b> The tag header lists the tags that are included and excluded in your current search.  Clicking on the 'x' in the header tag will remove it from the filter.</li>
+        <li><b>Tags:</b> Each song has a list of tags associated with the song.  Most of the current tags are musical genre tags (dark green), but we're starting to roll out a beta that allows our customers to add other kinds of tags and where possible when we're sourcing new music we tag it appropriately, for instance the Dancing with the Stars music is tagged as such.  You can add tags to either the included or the excluded list by clicking on a tag in the song list and choosing include or exclude.</li>
+        <li><b>Spotify Control:</b> If you have the Spotify Player installed, this control will play all of the songs in the current list that are linked to spotify tracks.</li>
+    </ul>
+</div>
+
+<div class="row col-md-12">
+    <p>Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
+    <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
+    <p>Do you use a different streaming provider or purchase your music from a different source? <a href="mailto:david@music4dance.net">Tell us about it</a> and we'll take a look into expanding our support.</p>
 </div>
 
 <div class="row col-xs-12"><hr /></div>
