--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -60,6 +60,8 @@
     <li>@Html.ActionLink("Update Purchase Info", "UpdatePurchase")</li>
     <li>@Html.ActionLink("Update Title Hashes", "UpdateTitleHash")</li>
     <li>@Html.ActionLink("Backup Tags", "BackupTags")</li>
+    <li>@Html.ActionLink("Recompute Dance Stats", "RebuildDances")</li>
+    <li>@Html.ActionLink("Rebuild Dance Tags", "RebuildDanceTags")</li>
     @if (User.IsInRole("dbAdmin"))
     {
         <li>@Html.ActionLink("Restore the Datbase", "RestoreDatabase")</li>
