--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -105,12 +105,12 @@
 
 <div id="music" class="row col-md-12">
     <h1 class="music">Music</h1>
-    <p style="font-size: 150%">The song list page can by found by clicking clicking the "Songs" itme in the "Music" menu at the top of the page.  You'll start with  a list of songs and you can refine your search in many different ways.  Check some of them out in the illustration below.</p>
+    <p class="big-text">The song list page can by found by clicking clicking the "Songs" itme in the "Music" menu at the top of the page.  You'll start with  a list of songs and you can refine your search in many different ways.  Check some of them out in the illustration below.</p>
 </div>
 
 <div class="row col-md-12">
     <img src="~/Content/song-page.png" alt="songs page" style="float: right; margin:10px" />
-    <ul style="list-style-type: upper-alpha; font-size: 150%">
+    <ul style="list-style-type: upper-alpha" class="big-text">
         <li><b>Dance Menu:</b> The dance menu will drop down to show all of the dance styles that we have cataloged. Clicking on any of the dances will filter the list to just those songs that can be danced to that style.  You can also see a list of dance styles on our <a href="/dances">dances page</a>.</li>
         <li><b>Text Search:</b> Type the name of an artist or title of a song or a tag (like musical genre) here, click the search button to the right and get a list of the songs that include those words in the title, artist or tags.</li>
         <li><b>More Options:</b> Clicking on this button will get you a few more options, including the ability to filter on a specific tempo range and limit your search to just songs that are linked to a particular streaming or purchase service (<a href="/song/advancedsearch?services=I">ITunes</a>, <a href="/song/advancedsearch?services=A">Amazon</a>, <a href="/song/advancedsearch?services=S">Spotify</a>, and <a href="/song/advancedsearch?services=X">Xbox Music</a>).</li>
