--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -338,3 +338,5 @@ h1, h2, h3, h4, h5, h6 { font-family: "Merienda";font-weight: 700 }
 @media (max-height: 800px) {
     #banner { display: none;}
 }
+
+.big-text { font-size: 150%}
