Implement Tag Cloud for dance pages

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -340,3 +340,14 @@ h1, h2, h3, h4, h5, h6 { font-family: "Merienda";font-weight: 700 }
 }
 
 .big-text { font-size: 150%}
+
+.cloud-0 {font-size: 100%}
+.cloud-1 {font-size: 110%}
+.cloud-2 {font-size: 120%}
+.cloud-3 {font-size: 130%}
+.cloud-4 {font-size: 140%}
+.cloud-5 {font-size: 150%}
+.cloud-6 {font-size: 160%}
+.cloud-7 {font-size: 170%}
+.cloud-8 {font-size: 180%}
+.cloud-9 {font-size: 190%}
