--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -14,9 +14,9 @@
     var description = @"<p>We're busy doing research and pulling together a general description for " + Model.DanceName + @".  Please check back later for more info.</p>";
     if (!string.IsNullOrWhiteSpace(Model.Dance.Description))
     {
-        var md = new Markdown {ExtraMode = true, SafeMode = false};
+        var md = new Markdown { ExtraMode = true, SafeMode = false };
         description = Model.Dance.Description;
-        description = Dance.SmartLinks(description,true);
+        description = Dance.SmartLinks(description, true);
         description = md.Transform(description);
     }
 
@@ -52,6 +52,7 @@
         {
             <a href="#references" class="list-group-item">References</a>
         }
+        <a href="#tags" class="list-group-item">Tags</a>
     </div>
 </div>
 
@@ -115,6 +116,37 @@
         }
     </ul>
 }
+
+<h4 id="tags">Tags</h4>
+<div>
+    @{
+        var tags = @Model.Dance.SongTags.Tags;
+        var max = tags.Where(t => t.TagClass != "Dance").Max(t => t.Count);
+        var inc = ((float)max) / 10;
+    }
+    @foreach (var titem in tags)
+    {
+        var tc = titem.TagClass.ToLower();
+        if (tc != "dance")
+        {
+            var size = "cloud-" + (int)Math.Floor(titem.Count / inc);
+            var url = "/song/addtags?tags={0}" + WebUtility.UrlEncode(titem.TagValue) + ":" + WebUtility.UrlEncode(titem.TagClass) +
+                      "&filter=" + WebUtility.UrlEncode(ViewBag.SongFilter.ToString());
+
+            <div class="btn-group @size">
+                <a href="#" role="button" class="dropdown-toggle label label-@tc" data-toggle="dropdown" aria-expanded="false">@titem.TagValue</a>
+                <ul class="dropdown-menu" role="menu">
+                    <li>
+                        <a href="@string.Format(url, "%2B")">Include songs tagged as @titem.TagValue</a>
+                    </li>
+                    <li>
+                        <a href="@string.Format(url, "%2D")">Exclude songs tagged as @titem.TagValue</a>
+                    </li>
+                </ul>
+            </div>
+        }
+    }
+</div>
 
 <p>
     @if (User.IsInRole("canEdit"))
