Fix typo on home page

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -105,7 +105,7 @@
 
 <div id="music" class="row col-md-12">
     <h1 class="music">Music</h1>
-    <p class="big-text">The song list page can by found by clicking clicking the "Songs" itme in the "Music" menu at the top of the page.  You'll start with  a list of songs and you can refine your search in many different ways.  Check some of them out in the illustration below.</p>
+    <p class="big-text">The song list page can by found by clicking clicking the "Songs" item in the "Music" menu at the top of the page.  You'll start with  a list of songs and you can refine your search in many different ways.  Check some of them out in the illustration below.</p>
 </div>
 
 <div class="row col-md-12">
