--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
 ﻿<!DOCTYPE html>
+@{
+    var help = "https://www.music4dance.net/blog/music4dance-help/";
+    if (@ViewData.ContainsKey("Help") && !string.IsNullOrWhiteSpace(ViewBag.Help))
+    {
+        help = string.Format("https://www.music4dance.net/blog/music4dance-help/{0}/",ViewBag.Help);
+    }
+}
 <html>
 <head>
     <meta charset="utf-8" />
@@ -72,13 +79,14 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink("Counter", "Counter", "Home")</li>
-                            <li>@Html.ActionLink("Tempi", "Tempi", "Home")</li>
+                            <li>@Html.ActionLink("Counter", "counter", "Home")</li>
+                            <li>@Html.ActionLink("Tempi (Tempos)", "tempi", "Home")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
+                            <li><a href="@help">Help</a></li>
                             <li><a href="https://www.music4dance.net/blog">Blog</a></li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Site Map", "sitemap", "Home")</li>
