Get round trip tempo -> counter -> dance page -> songlist working

--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -12,6 +12,10 @@
         {
             <script>var paramNumerator = @ViewBag.paramNumerator;</script>
         }
+        if (ViewData.ContainsKey("paramTempo"))
+        {
+            <script>var paramTempo = @ViewBag.paramTempo;</script>
+        }
         if (ViewData.ContainsKey("paramShowMPM"))
         {
             <script>var paramShowMPM = @(ViewBag.paramShowMPM ? "true" : "false");</script>
