--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -74,6 +74,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Dances", "index", "dances")</li>
                             <li>@Html.ActionLink("Songs", "index", "song")</li>
+                            <li>@Html.ActionLink("Tags", "index", "tag")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
